<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".fragments.VigneronEditFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <GridLayout
            android:id="@+id/edt_vigneron_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="1"
            android:rowCount="11">

            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="0"
                android:hint="@string/libelle">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_label_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/libelle"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="1"
                android:hint="@string/appelation">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_domaine_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/appelation"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="2"
                android:hint="@string/fixe">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_fixe_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/fixe"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="3"
                android:hint="@string/mobile">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_mobile_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/mobile"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="4"
                android:hint="@string/mail">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_mail_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/mail"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="5"
                android:hint="@string/fax">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_fax_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/fax"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="6"
                android:hint="@string/pays">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_pays_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/pays"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="7"
                android:hint="@string/ville">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_ville_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/ville"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="8"
                android:hint="@string/codepost">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_code_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/codepost"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="9"
                android:hint="@string/adresse">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_adresse_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/adresse"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_column="0"
                android:layout_row="10"
                android:hint="@string/comment">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edt_vigneron_comment_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_margin="5dp"
                    android:hint="@string/comment"
                    android:textColor="@color/colorBlack"
                    android:textSize="20sp"/>

            </android.support.design.widget.TextInputLayout>
        </GridLayout>
    </ScrollView>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/annuler"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnSave"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sauvegarder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btnCancel"
            app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>